test/parse_errors/declaration_instead_of_expr.go
package main

import "fmt"

func main(){
    fmt.Println(var a int = 12)
}